# saori-dll-example-rs

./: Cargo.toml  LICENSES.html  README.md
src/: lib.rs
